# eBay-Client

./: .env.example  README.md  pyproject.toml
src/: exceptions.py  main.py  mappers.py  schemas.py  settings.py  utils.py
src/api/v1/: dependencies.py
src/api/v1/routers/: __init__.py  ebay.py
src/services/: exchange_rate.py
src/services/ebay/: auth.py  client.py
